# deploy

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: main.yaml
src/: deploy_client.rs  deploy_server.rs  main.rs  shared.rs
src/deploy_client/: request.rs
src/deploy_server/: request.rs
